--- a/DP/Untitled.ipynb
+++ b/DP/Untitled.ipynb
@@ -2,20 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c6acd126",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_13443/3716353718.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKMeans\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
    "source": [
-    "print(5)"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import datasets\n",
+    "from sklearn.cluster import KMeans\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "iris = datasets.load_iris()\n",
+    "X = pd.DataFrame(iris.data)\n",
+    "X.columns = ['Sepal_Length', 'Sepal_Width', 'Petal_Length', 'Petal_Width']\n",
+    "y = pd.DataFrame(iris.target)\n",
+    "y.columns = ['Targets']\n",
+    "\n",
+    "model = KMeans(n_clusters=3)\n",
+    "model.fit(X)\n",
+    "\n",
+    "colormap = np.array(['red', 'lime', 'black'])\n",
+    "\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.scatter(X.Petal_Length, X.Petal_Width, c=colormap[y.Targets], s=40)\n",
+    "plt.title('Real Clusters')\n",
+    "plt.xlabel('Petal Length')\n",
+    "plt.ylabel('Petal Width')\n",
+    "\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.scatter(X.Petal_Length, X.Petal_Width, c=colormap[model.labels_], s=40)\n",
+    "plt.title('K-Means clustering')\n",
+    "plt.xlabel('Petal length')\n",
+    "plt.ylabel('Petal width')\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "xas = scaler.transform(X)\n",
+    "xs = pd.DataFrame(xas, columns=X.columns)\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "gmm =GaussianMixture(n_components=3)\n",
+    "gmm.fit(xs)\n",
+    "gmm_y = gmm.predict(xs)\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.scatter(X.Petal_Length, X.Petal_Width, c=colormap[gmm_y], s=40)\n",
+    "plt.title('gmm clustering')\n",
+    "plt.xlabel('petal length')\n",
+    "plt.ylabel('petal width')\n",
+    "print('observation the gmm using em algorithm based clusterig matched')"
    ]
   },
   {
