--- a/DP/Untitled.ipynb
+++ b/DP/Untitled.ipynb
@@ -190,6 +190,7 @@
     "model.fit(X)\n",
     "model = KMeans(n_clusters=2)\n",
     "model.fit(X)\n",
+    "\n",
     "colormap = np.array(['red', 'blue', 'orange'])\n",
     "\n",
     "plt.subplot(2,2,1)\n",
@@ -547,6 +548,68 @@
     "print('The names of target classes:\\n',iris['target_names'])\n",
     "print('The full description of the dataset:\\n',iris['DESCR'])\n",
     "print('The path to the location of the data:\\n',iris['filename'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5359d42e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (4,1) and (3,1) not aligned: 1 (dim 1) != 3 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_5704/3314547304.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0moutgrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mderivatives_sigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0md_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEO\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0moutgrad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mEH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mhiddengrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mderivatives_sigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhlayer_act\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0md_hiddenlayer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEH\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mhiddengrad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (4,1) and (3,1) not aligned: 1 (dim 1) != 3 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.array(([0,0],[0,1],[1,0],[1,1]),dtype = float)\n",
+    "y = np.array(([0],[0],[0],[1]),dtype = float)\n",
+    "def sigmoid(x):\n",
+    "    return 1/(1+np.exp(-x))  #exp exponential value\n",
+    "\n",
+    "def derivatives_sigmoid(x):\n",
+    "    return x * (1 - x)\n",
+    "\n",
+    "epoch = 9000\n",
+    "lr = .1\n",
+    "inputlayer_neurons = 2\n",
+    "hiddenlayer_neurons = 3\n",
+    "output_neurons = 1\n",
+    "\n",
+    "wh = np.random.uniform(size = (inputlayer_neurons,hiddenlayer_neurons))\n",
+    "bh = np.random.uniform(size = (1,hiddenlayer_neurons))\n",
+    "wout = np.random.uniform(size = (hiddenlayer_neurons,output_neurons))\n",
+    "bout = np.random.uniform(size = (1,output_neurons))\n",
+    "for i in range(epoch):\n",
+    "    hinp1 = np.dot(X,wh)\n",
+    "    hinp = hinp1+bh\n",
+    "    hlayer_act = sigmoid(hinp)\n",
+    "    \n",
+    "    outinp1 = np.dot(hlayer_act,wout)\n",
+    "    outinp = outinp1 + bout\n",
+    "    \n",
+    "    output = sigmoid(outinp)\n",
+    "    EO = y - output\n",
+    "    \n",
+    "    outgrad = derivatives_sigmoid(output)\n",
+    "    d_output = EO * outgrad\n",
+    "    EH = d_output.dot(wout.T)\n",
+    "    \n",
+    "    hiddengrad = derivatives_sigmoid(hlayer_act)\n",
+    "    d_hiddenlayer = EH * hiddengrad\n",
+    "    wout += hlayer_act.T.dot(d_output) * lr\n",
+    "    wh += X.T.dot(d_hiddenlayer) * lr\n",
+    "    \n",
+    "print(\"Actual Output:\\n\" + str(y))\n",
+    "print(\"Predicted Output:\\n\",output)    "
    ]
   }
  ],
