--- a/TCS_IPA/a.ipynb
+++ b/TCS_IPA/a.ipynb
@@ -51,6 +51,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{20: 1, 40: 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[]\n",
+    "l.append((20,1,45))\n",
+    "l.append((40,8,99))\n",
+    "\n",
+    "for item in l:\n",
+    "    print(item[0],item[1],item[2])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{20: 1, 40: 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[]\n",
+    "l.append((20,1))\n",
+    "l.append((40,8))\n",
+    "print(dict(l))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -70,11 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.8\n"
+     ]
+    }
+   ],
    "source": [
-    "n=[]"
+    "x = round(5.76543, 1)\n",
+    "print(x)"
    ]
   }
  ],
